PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add *pel-show-symbol* bound to ~<f11> ? S~.  A simple utility to print the symbol name and value.
  This can help when debugging emacs lisp code.
- Optimize key bindings for syntax checking by re-using the same key sequence for several major
  modes and eliminating differences:
  - In Erlang and Go buffers: the ~<f11> ! !~ key sequence is now used to toggle activation of
    syntax checking despite their use of a language specific option processing.
    This way these buffers use the same key sequence used elsewhere,
    and frees the ~<f12> !~ key binding previously used.
  - Replaced the ~<f12> e~ key binding by ~<f11> ! l~ activated in the major mode when flycheck minor mode is active.
    This simplifies the key binding and increases coherence.
  - Removed the ~<f12> c l~, ~<f12> c .~ and ~<f12> c //~ key binding in emacs-lisp major mode.  In the Emacs Lisp buffers,
    like other major mode buffers, use the standard flycheck-mode key bindings.  This standardizes the use of flycheck
    to all major modes.
  - Changed key bindings for *markdown-insert-header-setext-1* from ~<f12> !~ to ~<f12> M-1~ and,
    *markdown-insert-header-setext-2* from ~<f12> @~ to ~<f12> M-2~ a more logical choice.
- Fix management of autoloaded flycheck and flymake by *pel-toggle-mode*: the code of *pel-autoload-p* was using
  knowledge of the internal data structure of a function used by Emacs prior to Emacs 28.  This PEL base function
  is no longer available; PEL now uses Emacs provided *autoloadp* and *autoload-do-load* which have been available since Emacs 24.3
- Add ~<f12><f1>~ key binding for *change-log-mode* to open the new [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/changelog][⅀Changelog]] PDF, activated when *pel-use-changelog-mode*
  user option is on.